# robotics-ai-classes

./: .gitignore  .gitmodules  LICENSE  README.md
docker/: Dockerfile  build_and_run.sh
move_robot/: CMakeLists.txt  package.xml  setup.py
move_robot/config/: ur3_dh.yaml  ur3_mdh.yaml
move_robot/kinematics/: JointStatePublisher.py  KinematicsManager.py  __init__.py  utilities.py
move_robot/launch/: common.launch  start_fk.launch  start_ik.launch
move_robot/nodes/: kinematics_assignment.py  my_joint_state_publisher.py
move_robot/rviz/: rviz.rviz
